--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Getting Started</title>
+  <title>API Backend Donation UMKM</title>
 </head>
 <body>
   <div id="swagger"></div>
